@@ -4,6 +4,8 @@ Changes in version 2.5-2
   
   o Fixes to Chinese translation (thanks to Tsung-wu Ho).
   
+  o No longer re-export utils::data() (suggestion of Brian Ripley).
+  
   o Small fixes
 
 
